--- a/flask_frontend/templates/dashboard.html
+++ b/flask_frontend/templates/dashboard.html
@@ -117,6 +117,7 @@
                 </div>
             </div>
         {% endif %}
+        <a href="{{ url_for('home') }}" class="btn" style="background:#7366bd;">Back to Welcome Screen</a>
         <a href="{{ url_for('logout') }}" class="btn btn-logout">Logout</a>
     </div>
 </body>
