--- a/flask_frontend/templates/register.html
+++ b/flask_frontend/templates/register.html
@@ -106,6 +106,7 @@
             <button type="submit">Register</button>
         </form>
         <a href="{{ url_for('login') }}" class="login-link">Already have an account? Login</a>
+        <a href="{{ url_for('home') }}" class="login-link" style="color:#7366bd;">Back to Welcome Screen</a>
     </div>
 </body>
 </html>
