--- a/flask_frontend/templates/reset_password.html
+++ b/flask_frontend/templates/reset_password.html
@@ -27,6 +27,7 @@
   </form>
   <div class="mt-3 text-center">
     <a href="/login">Back to Login</a>
+    <a href="{{ url_for('home') }}" class="login-link" style="color:#7366bd;">Back to Welcome Screen</a>
   </div>
 </div>
 {% endblock %}
