--- a/flask_frontend/templates/home.html
+++ b/flask_frontend/templates/home.html
@@ -34,6 +34,7 @@
         <a href="{{ url_for('login') }}" class="btn btn-login">Login</a>
         <a href="{{ url_for('register') }}" class="btn btn-register">Register</a>
         <a href="{{ url_for('transactions') }}" class="btn btn-trans">Transactions</a>
+        <a href="{{ url_for('map_page') }}" class="btn btn-map" style="background:#43c6ac;color:#fff;">Map</a>
     </div>
 </body>
 </html>
